Add change grid size function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container" id="grid"></div>
+        <h1>Etch-a-Sketch</h1>
+        <main>
+            <div class="buttons">
+                <button>Change color</button>
+                <button>Rainbow mode</button>
+                <button>Shading mode</button>
+                <button id="new-size">Change grid size</button>
+                <button id="clear">Clear grid</button>
+            </div>
+            <div class="container" id="grid"></div>
+            <div class="toggle" id="checkbox"></div>
+        </main>
+        
         <script src="script.js"></script>
     </body>
 </html>
